# rtemskit

./: BUILD.gn  README
arch/: BUILD.gn  common.gni
arch/arm/am43xx/: libbsd@6-freebsd-12-patch.py
arch/arm/am43xx/am437x_idk_evm/: BUILD.gn  args.gn
arch/arm/apollo3p/ama3b2evb/: BUILD.gn  ama3b2evb.c  args.gn
arch/arm/apollo3p/iwatchv0/: BUILD.gn  args.gn  args.gn.libbsd  gdb.init  gdbserver.sh  iwatchv0.c
arch/arm/apollo3p/iwatchv0/include/: soc.h
arch/arm/apollo3p/os-bsp/apollo3p-bsp/: headers.am
arch/arm/apollo3p/os-bsp/apollo3p-bsp/config/: apollo3p.cfg
arch/arm/apollo3p/os-bsp/apollo3p-bsp/include/: bsp.h
arch/arm/apollo3p/os-bsp/apollo3p-bsp/start/: apollo_irq.c  apollo_start.c  bspreset.c  bspstart.c  bspstarthook.c  linkcmds.apollo3p  start.S
arch/arm/apollo3p/os-bsp/apollo3p-c/: Makefile.am  Makefile.in  aclocal.m4  bspopts.h.in  configure  configure.ac
arch/arm/apollo3p/os-bsp/apollo3p-c/autom4te.cache/: output.0  requests  traces.0  traces.1
arch/arm/common/: CMakeLists.txt  shutdown.c
arch/arm/common/ambiq-sdk/: BUILD.gn  CMakeLists.txt
arch/arm/common/ambiq-sdk/CMSIS/: version_cmsis_info.txt
arch/arm/common/ambiq-sdk/mcu/: Makefile
arch/arm/common/cm_backtrace/: BUILD.gn  CMakeLists.txt  cm_backtrace.c  cmb_cfg.h  cmb_def.h
arch/arm/common/cortex-m/: BUILD.gn  cortexm-exception.c  cortexm-fatal.c
arch/arm/common/stm32cube/: BUILD.gn  CMakeLists.txt  stm32cube_hal.c
arch/arm/common/stm32cube/common_ll/: README.rst
arch/arm/common/stm32cube/common_ll/include/: stm32_ll_adc.h  stm32_ll_bdma.h  stm32_ll_bus.h  stm32_ll_comp.h  stm32_ll_cordic.h  stm32_ll_cortex.h  stm32_ll_crc.h  stm32_ll_crs.h  stm32_ll_dac.h  stm32_ll_delayblock.h  stm32_ll_dma.h  stm32_ll_dma2d.h  stm32_ll_dmamux.h  stm32_ll_exti.h  stm32_ll_fmac.h  stm32_ll_fmc.h  stm32_ll_fmpi2c.h  stm32_ll_fsmc.h  stm32_ll_gpio.h  stm32_ll_hrtim.h  stm32_ll_hsem.h  stm32_ll_i2c.h  stm32_ll_ipcc.h  stm32_ll_iwdg.h  stm32_ll_lptim.h  stm32_ll_lpuart.h  stm32_ll_mdma.h  stm32_ll_opamp.h  stm32_ll_pka.h  stm32_ll_pwr.h  stm32_ll_rcc.h  stm32_ll_rng.h  stm32_ll_rtc.h  stm32_ll_sdmmc.h  stm32_ll_spi.h  stm32_ll_swpmi.h  stm32_ll_system.h  stm32_ll_tim.h  stm32_ll_ucpd.h  stm32_ll_usart.h  (+2 more)
arch/arm/common/stm32cube/stm32f1xx/: CMakeLists.txt  README  release_note.html
arch/arm/common/stm32cube/stm32f1xx/soc/: stm32f100xb.h  stm32f100xe.h  stm32f101x6.h  stm32f101xb.h  stm32f101xe.h  stm32f101xg.h  stm32f102x6.h  stm32f102xb.h  stm32f103x6.h  stm32f103xb.h  stm32f103xe.h  stm32f103xg.h  stm32f105xc.h  stm32f107xc.h  stm32f1xx.h
arch/arm/common/stm32cube/stm32f2xx/: CMakeLists.txt  README  release_note.html
arch/arm/common/stm32cube/stm32f2xx/soc/: generate.bat  stm32f205xx.h  stm32f207xx.h  stm32f215xx.h  stm32f217xx.h  stm32f2xx.h  system_stm32f2xx.c
arch/arm/common/stm32cube/stm32f3xx/: CMakeLists.txt  README  release_note.html
arch/arm/common/stm32cube/stm32f3xx/soc/: stm32f3xx.h
arch/arm/common/stm32cube/stm32f4xx/: CMakeLists.txt
arch/arm/common/stm32cube/stm32f7xx/: CMakeLists.txt  system_stm32f7xx.c
arch/arm/common/stm32cube/stm32h7xx/: CMakeLists.txt  README  release_note.html
arch/arm/include/asm/: arch  assembler.h  atomic.h  cache.h  gpio.h  io.h  omap_gpio.h
arch/arm/include/asm/arch-am33xx/: hardware.h  sys_proto.h
arch/arm/lib/: BUILD.gn
arch/arm/stm32f7/: BUILD.gn  CMakeLists.txt  Kconfig  args.gn  args.gn.libbsd  dbg.ini  defconfig.h.in  gdb.init  stm32-pinctrl-common.h  stm32-pinctrl.h  stm32_board.c  stm32_mpu.c  stm32_pinmux.c  stm32_pinmux.h  stm32f7_defconfig  stm32f7_libbsd_defconfig  stm32f7_pinmux.h
arch/arm/stm32f7/include/: soc.h
arch/arm/stm32f7/os-bsp/stm32f7-bsp/: README  headers.am
arch/arm/stm32f7/os-bsp/stm32f7-bsp/config/: stm32f7.cfg  stm32f7.inc  stm32f7_libbsd.cfg
arch/arm/stm32f7/os-bsp/stm32f7-c/: Makefile.am  Makefile.in  aclocal.m4  bspopts.h.in  configure  configure.ac
arch/arm/stm32h7/nucleo-h743zi/: BUILD.gn  args.gn  args.gn.libbsd  config.ini  gdb.init  gdbserver.sh
arch/arm/stm32h7/nucleo-h743zi/include/: soc.h
arch/arm/xilinx-zynq/: slcr.c
arch/arm/xilinx-zynq/xilinx_zynq_a9_qemu/: BUILD.gn  args.gn  gdb.init  gdbserver.sh  zynq_dtb.c
drivers/: BUILD.gn
drivers/clk/: BUILD.gn  clk-composite.c  clk-divider.c  clk-fixed-factor.c  clk-gate.c  clk-mux.c  clk-uclass.c  clk.c  clk_zynq.c
drivers/clk/ti/: BUILD.gn  clk-am3-dpll.c  clk-ctrl.c  clk-divider.c
drivers/core/: device-remove.c  device.c  devres.c  dump.c  fdtaddr.c  interrupt.c  lists.c  of_access.c  of_addr.c  of_irq.c  ofnode.c  read.c  regmap.c  root.c  simple-bus.c  simple-pm-bus.c  uclass.c  util.c
drivers/gpio/: BUILD.gn  gpio-uclass.c  omap_gpio.c  zynq_gpio.c
drivers/i2c/: BUILD.gn  i2c-gpio.c  i2c-omap.c  i2c-uclass.c
drivers/i2c/muxes/: i2c-mux-gpio.c  i2c-mux-uclass.c  pca954x.c
drivers/irqchip/: BUILD.gn  arm_gic.c
drivers/pinctrl/: BUILD.gn  pinctrl-single.c  pinctrl-uclass.c
drivers/reset/: BUILD.gn  reset-syscon.c  reset-uclass.c
drivers/serial/: BUILD.gn  serial-ns16550.c  serial-uclass.c  serial-zynq.c
drivers/shell/: dm_shell.c
drivers/spi/: BUILD.gn  spi-mem.c  spi-uclass.c
gn/: BUILD.gn  BUILDCONFIG.gn
gn/toolchain/: gcc_toolchain.gni
gn/toolchain/linux/: BUILD.gn
gn/toolchain/rtems/: BUILD.gn  rtems.gni  rtems_base_args.gni  rtems_bdbuf_args.gni  rtems_classic_args.gni  rtems_fs_args.gni  rtems_libbsd_args.gni  rtems_libdl_args.gni  rtems_net_args.gni  rtems_posix_args.gni  rtems_scheduler_args.gni  rtems_scheduler_smp_args.gni  rtems_shell_args.gni
gn/toolchain/rtems/config/: BUILD.gn
gn/utils/: genbin.gni  mkimage.gni
include/: button.h  common.h  (+8 more)
init/: BUILD.gn  main.c  net0.c  shell.c  termios.c
lib/: BUILD.gn  fdt_support.c  fdtdec.c  featrues.gni  modinit.c  observer.c  of_live.c  string.c  vsprintf.c
lib/canopen/: BUILD.gn  CO_driver.c  CO_driver_target.h
lib/gui/: BUILD.gn  guix_rtems_init.c  guix_rtems_notify.h  guix_rtems_queue.c  gx_port.h
lib/linux/: linux_compat.c  lnx_timer.c
lib/shellcmds/: BUILD.gn  shell_clear.c  shell_vt100.h  shell_xmodem.c
tools/: BUILD.gn
(+246 files in other folders)
