import("//gn/toolchain/rtems/rtems.gni")

template("make_image") {
    assert(defined(invoker.loadaddr), "Not found load address")
    loadaddr = invoker.loadaddr
    if (defined(invoker.arch)) {
        arch = invoker.arch
    } else {
        arch = "arm"
    }
    if (defined(invoker.comp)) {
        comp = invoker.comp
    } else {
        comp = "none"
    }
    if (defined(invoker.entryaddr)) {
        entryaddr = invoker.entryaddr
    } else {
        entryaddr = loadaddr
    }
    action(target_name) {
        script = "//tools/scripts/mkimage.py"
        sources = ["$root_out_dir/kernel.bin"]
        outputs = ["$root_out_dir/kernel.img"]
        args = [
            "--arch", "${arch}",
            "--os","rtems",
            "--image","kernel",
            "--compression","${comp}",
            "--loadaddr", "${loadaddr}",
            "--entryaddr", "${entryaddr}",
            "--name", "RTEMS",
            "--binfile", rebase_path("$root_out_dir/kernel.bin")
        ]
        deps = invoker.deps
    }
}
