import("//gn/toolchain/rtems/rtems.gni")
import("//lib/featrues.gni")
import("//arch/common.gni")


#======================
# ARM library
#======================
group("lib") {
  deps = [":base"]
}


#============================
# Optimized library function
#============================
component("base") {
  sources = [
    "memcpy.S",
    "memset.S",
    "strchr.S",
    "strrchr.S",
    "changebit.S",
    "clearbit.S",
    "setbit.S",
    # "testchangebit.S",
    # "testclearbit.S",
    # "testsetbit.S"
  ]
  defines = [
    "CONFIG_SYS_THUMB_BUILD=1",
    "CONFIG_THUMB2_KERNEL=1",
    "CONFIG_ARM_ASM_UNIFIED=1",
    "__ASSEMBLY__",
  ]
  asmflags = [
    "-Wa,-mimplicit-it=always",
    "-mthumb-interwork"
  ]
  include_dirs = ["."]
}


