#============
#STM32F7 
#============
board_configs = [
  "//board/common/stm32cube:stm32cube_config",
  "//board/common/stm32cube:stm32f7_configs"
]

static_library("board") {
  sources = [
      "stm32_board.c",
      "stm32_mpu.c",
      "stm32_pinmux.c"
  ] 
  
  configs += board_configs
  public_deps = [
    "//board/common/stm32cube:stm32f7",
    "//board/common/stm32cube",
    "//board/common/cortex-m",
    "//board/common/cm_backtrace"
  ]
}

#============
# Board
#============
source_set("target_board") {
  sources = [
      "stm32_board.c",
      "stm32_mpu.c",
      "stm32_pinmux.c"
  ] 
  
  configs += board_configs
}

#============
# Drivers
#============
static_library("drivers") {
  sources = [
    "//driver/console/stm32f7_uart.c",
    "//driver/dma/stm32_dma.c",
    "//driver/base/dmaengine.c",
    "//driver/base/virt-dma.c",
    "//driver/flash/stm32-qspi-flash.c",
    "//driver/gpio/stm32_gpio.c",
    "//driver/i2c/stm32_i2c.c",
    "//driver/net/stm32_net.c"
  ]
  include_dirs = ["include"]
  configs += board_configs
}

