#Block cache
declare_args() {
  bdbuf_max_read_ahead_blks = 0
  bdbuf_max_write_blks = 16
  bdbuf_swapout_task_priority = 0
  #[unit: ms]
  bdbuf_swapout_period = 250
  bdbuf_swapout_worker_tasks = 0
  bdbuf_swapout_worker_task_priority = 0
  #[unit: ms]
  bdbuf_swapout_block_hold = 1000
  bdbuf_task_stack_size = 4096
  bdbuf_read_ahead_task_priority = 0
  bdbuf_max_blksize = 0
  bdbuf_min_blksize = 0
  bdbuf_cache_size = 0
}
