import("//lib/featrues.gni")
import("//arch/common.gni")

board_configs = [
  "//board/common/ambiq-sdk:apollo_includes"
]

component("board") {
  component_type = "static_library"
  deps = []
  sources = ["ama3b2evb.c"]
  configs = board_configs
  public_deps = [
    "//board/common/ambiq-sdk:apollo",
    "//board/common/cortex-m",
    "//board/common/cm_backtrace"
  ]
}

component("driver") {
  component_type = "static_library"
  public_deps = []
  defines = []
  sources = [
    "//driver/gpio/apollo3p_gpio.c",
    "//driver/i2c/apollo3p_i2c.c",
    "//driver/spi/apollo3p_mspi.c"
  ]
  include_dirs = ["include"]
  configs = board_configs
  deps = [":console"]
}

component("console") {
  sources = ["//driver/console/apollo3p_serial.c"]
  include_dirs = ["include"]
  configs = board_configs
  defines = ["CONFIG_CONSOLE_UART=0"]
}
